kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels: &labels
    app: blog
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector: *labels
